--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <!-- 元数据 -->
   <meta charset="utf-8">
   
-    <link rel="icon" href="/assets/favicon.png">
+    <link rel="icon" href="/assets/208010141.png">
   
   
   <title>这个页面走丢了呢… | 若琳酱 | Ruollin</title>
