deploy: ec17c3fbfb1667c95cbb06eb73086e1256f0887e

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <li>本站已在风雨中飘摇<span id="kr-since">Loading...</span></li>
                         </div>
                         <div>
-                            <li>自豪地使用 <a href="https://github.com/Candinya/Kratos-Rebirth" target="_blank">Kratos:Rebirth</a> 主题</li>
+                            <li>using var theme = new <a href="https://github.com/Candinya/Kratos-Rebirth" target="_blank">Kratos:Rebirth</a>();</li>
                             <li>站点由 <a href="https://github.com/ruollin/ruollin.github.io/graphs/contributors" target="_blank">若琳酱</a> 用 <i class="fa fa-heart" style="color:#d43f57"></i> 搭建</li>
                         </div>
                         <!-- 额外的追加注入项 -->
