--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 
 <!-- 额外的追加注入项 -->
 
-  <script src="/assets/scripts/counter.js"></script>
+  <script src="/assets/scripts/counter.js"></script>,<script src="/assets/scripts/RemoveBrokenStyle.js"></script>
 
 
     </body>
